src/compiler/python/parser.py
"""Recursive descent parser for the btrc language."""

from typing import Optional

from .tokens import Token, TokenType, TYPE_KEYWORDS
from .ast_nodes import (
    AssignExpr,
    BinaryExpr,
    Block,
    BoolLiteral,
    BraceInitializer,
    BreakStmt,
    CallExpr,
    CaseClause,
    CastExpr,
    CForStmt,
    CharLiteral,
    ClassDecl,
    ContinueStmt,
    DeleteStmt,
    DoWhileStmt,
    EnumDecl,
    ExprStmt,
    FieldAccessExpr,
    FieldDecl,
    FloatLiteral,
    ForInStmt,
    FStringLiteral,
    FunctionDecl,
    Identifier,
    IfStmt,
    IndexExpr,
    InterfaceDecl,
    IntLiteral,
    LambdaExpr,
    ListLiteral,
    MapLiteral,
    MethodDecl,
    RichEnumDecl,
    RichEnumVariant,
    NewExpr,
    NullLiteral,
    Param,
    ParallelForStmt,
    PreprocessorDirective,
    Program,
    PropertyDecl,
    ReturnStmt,
    SelfExpr,
    SuperExpr,
    SizeofExpr,
    StringLiteral,
    StructDecl,
    SwitchStmt,
    TernaryExpr,
    ThrowStmt,
    TryCatchStmt,
    TupleLiteral,
    TypedefDecl,
    TypeExpr,
    UnaryExpr,
    VarDeclStmt,
    WhileStmt,
)


class ParseError(Exception):
    def __init__(self, message: str, line: int, col: int):
        self.line = line
        self.col = col
        super().__init__(f"{message} at {line}:{col}")


class Parser:
    def __init__(self, tokens: list[Token]):
        self.tokens = tokens
        self.pos = 0

    def parse(self) -> Program:
        decls = []
        while not self._at_end():
            decls.append(self._parse_top_level_item())
        return Program(declarations=decls)

    # ---- Token helpers ----

    def _peek(self, offset: int = 0) -> Token:
        pos = self.pos + offset
        if pos < len(self.tokens):
            return self.tokens[pos]
        return self.tokens[-1]  # EOF

    def _advance(self) -> Token:
        tok = self.tokens[self.pos]
        self.pos += 1
        return tok

    def _at_end(self) -> bool:
        return self._peek().type == TokenType.EOF

    def _check(self, *types: TokenType) -> bool:
        return self._peek().type in types

    def _match(self, *types: TokenType) -> Optional[Token]:
        if self._peek().type in types:
            return self._advance()
        return None

    def _expect(self, token_type: TokenType, msg: str = "") -> Token:
        tok = self._peek()
        if tok.type == token_type:
            return self._advance()
        expected = msg or token_type.name
        raise ParseError(
            f"Expected {expected}, got {tok.type.name} '{tok.value}'",
            tok.line, tok.col
        )

    def _error(self, msg: str) -> ParseError:
        tok = self._peek()
        return ParseError(msg, tok.line, tok.col)

    # ---- Helpers for >> splitting in generic context ----

    def _expect_gt(self) -> Token:
        """Expect a '>' — handles splitting '>>' and '>>=' tokens."""
        tok = self._peek()
        if tok.type == TokenType.GT:
            return self._advance()
        if tok.type == TokenType.GT_GT:
            # Split >> into > and >
            self._advance()
            # Insert a synthetic > token back into the stream
            synthetic = Token(TokenType.GT, ">", tok.line, tok.col + 1)
            self.tokens.insert(self.pos, synthetic)
            return Token(TokenType.GT, ">", tok.line, tok.col)
        if tok.type == TokenType.GT_GT_EQ:
            # Split >>= into > and >=
            self._advance()
            synthetic = Token(TokenType.GT_EQ, ">=", tok.line, tok.col + 1)
            self.tokens.insert(self.pos, synthetic)
            return Token(TokenType.GT, ">", tok.line, tok.col)
        raise ParseError(
            f"Expected '>', got {tok.type.name} '{tok.value}'",
            tok.line, tok.col
        )

    # ---- Top level ----

    def _parse_top_level_item(self):
        tok = self._peek()

        # Preprocessor directive
        if tok.type == TokenType.PREPROCESSOR:
            return self._parse_preprocessor()

        # @gpu annotation
        is_gpu = False
        if tok.type == TokenType.AT_GPU:
            is_gpu = True
            self._advance()
            tok = self._peek()

        # interface declaration
        if tok.type == TokenType.INTERFACE and not is_gpu:
            return self._parse_interface_decl()

        # abstract class declaration
        if tok.type == TokenType.ABSTRACT and not is_gpu:
            next_tok = self._peek(1)
            if next_tok.type == TokenType.CLASS:
                return self._parse_class_decl(is_abstract=True)

        # class declaration
        if tok.type == TokenType.CLASS and not is_gpu:
            # Could be class keyword (access spec) or class declaration
            # If next token after 'class' is an IDENT and the one after that
            # is '{' or '<', it's a class declaration
            next_tok = self._peek(1)
            if next_tok.type == TokenType.IDENT:
                after = self._peek(2)
                if after.type in (TokenType.LBRACE, TokenType.LT, TokenType.EXTENDS,
                                  TokenType.IMPLEMENTS):
                    return self._parse_class_decl()

        # struct declaration (only if 'struct Name {' or 'struct Name ;', not 'struct Name* func()')
        if tok.type == TokenType.STRUCT and not is_gpu:
            next_tok = self._peek(1)
            if next_tok.type == TokenType.IDENT:
                after = self._peek(2)
                if after.type in (TokenType.LBRACE, TokenType.SEMICOLON):
                    return self._parse_struct_decl()
            elif next_tok.type == TokenType.LBRACE:
                return self._parse_struct_decl()

        # enum declaration (or rich enum: enum class Name { ... })
        if tok.type == TokenType.ENUM and not is_gpu:
            next_tok = self._peek(1)
            if next_tok.type == TokenType.CLASS:
                return self._parse_rich_enum_decl()
            return self._parse_enum_decl()

        # typedef
        if tok.type == TokenType.TYPEDEF and not is_gpu:
            return self._parse_typedef_decl()

        # function or variable declaration
        # Both start with a type expression
        if self._is_type_start(tok):
            return self._parse_function_or_var_decl(is_gpu)

        raise self._error(f"Unexpected token '{tok.value}' at top level")

    def _parse_preprocessor(self) -> PreprocessorDirective:
        tok = self._advance()
        return PreprocessorDirective(text=tok.value, line=tok.line, col=tok.col)

    # ---- Class declaration ----

    def _parse_class_decl(self, is_abstract: bool = False) -> ClassDecl:
        if is_abstract:
            self._expect(TokenType.ABSTRACT)
        tok = self._expect(TokenType.CLASS)
        name_tok = self._expect(TokenType.IDENT, "class name")
        name = name_tok.value

        # Generic params
        generic_params = []
        if self._match(TokenType.LT):
            generic_params.append(self._expect(TokenType.IDENT, "generic param").value)
            while self._match(TokenType.COMMA):
                generic_params.append(self._expect(TokenType.IDENT, "generic param").value)
            self._expect_gt()

        # Inheritance
        parent = None
        if self._match(TokenType.EXTENDS):
            parent = self._expect(TokenType.IDENT, "parent class name").value

        # Interface implementation
        interfaces = []
        if self._match(TokenType.IMPLEMENTS):
            interfaces.append(self._expect(TokenType.IDENT, "interface name").value)
            while self._match(TokenType.COMMA):
                interfaces.append(self._expect(TokenType.IDENT, "interface name").value)

        self._expect(TokenType.LBRACE)

        members = []
        while not self._check(TokenType.RBRACE) and not self._at_end():
            members.append(self._parse_class_member(allow_abstract=is_abstract))

        self._expect(TokenType.RBRACE)
        return ClassDecl(name=name, generic_params=generic_params,
                         members=members, parent=parent, interfaces=interfaces,
                         is_abstract=is_abstract, line=tok.line, col=tok.col)

    def _parse_class_member(self, allow_abstract: bool = False):
        """Parse a class member: access_spec (field | method)."""
        tok = self._peek()

        # access specifier
        if tok.type == TokenType.PUBLIC:
            access = "public"
            self._advance()
        elif tok.type == TokenType.PRIVATE:
            access = "private"
            self._advance()
        elif tok.type in (TokenType.CLASS, TokenType.STATIC):
            access = "class"
            self._advance()
        else:
            raise self._error(f"Expected access specifier (public/private/static), got '{tok.value}'")

        # Check for abstract method
        is_abstract_method = False
        if allow_abstract and self._check(TokenType.ABSTRACT):
            is_abstract_method = True
            self._advance()

        # Check for @gpu
        is_gpu = False
        if self._check(TokenType.AT_GPU):
            is_gpu = True
            self._advance()

        # Parse type
        type_expr = self._parse_type_expr()

        # Constructor detection: if next token is '(' instead of IDENT,
        # the "type" we just parsed is actually the constructor name
        if self._check(TokenType.LPAREN):
            # Constructor — type_expr.base is the method name, return type is the same
            name = type_expr.base
            return self._parse_method_rest(access, type_expr, name, is_gpu, tok.line, tok.col,
                                           is_abstract=is_abstract_method)

        # Name
        name_tok = self._expect(TokenType.IDENT, "member name")
        name = name_tok.value

        # If next is '(' → method, otherwise → field or property
        if self._check(TokenType.LPAREN):
            return self._parse_method_rest(access, type_expr, name, is_gpu, tok.line, tok.col,
                                           is_abstract=is_abstract_method)
        elif self._check(TokenType.LBRACE) and self._is_property_start():
            return self._parse_property(access, type_expr, name, tok.line, tok.col)
        else:
            # Field
            init = None
            if self._match(TokenType.EQ):
                init = self._parse_expr()
            self._expect(TokenType.SEMICOLON)
            return FieldDecl(access=access, type=type_expr, name=name,
                             initializer=init, line=tok.line, col=tok.col)

    def _parse_method_rest(self, access, return_type, name, is_gpu, line, col,
                           is_abstract: bool = False) -> MethodDecl:
        self._expect(TokenType.LPAREN)
        params = self._parse_param_list()
        self._expect(TokenType.RPAREN)
        if is_abstract:
            # Abstract methods end with semicolon, no body
            self._expect(TokenType.SEMICOLON)
            body = None
        else:
            body = self._parse_block()
        return MethodDecl(access=access, return_type=return_type, name=name,
                          params=params, body=body, is_gpu=is_gpu,
                          is_abstract=is_abstract, line=line, col=col)

    def _is_property_start(self) -> bool:
        """Check if '{' starts a property definition (contains 'get' or 'set')."""
        save = self.pos
        self.pos += 1  # skip {
        tok = self.tokens[self.pos] if self.pos < len(self.tokens) else self.tokens[-1]
        result = (tok.type == TokenType.IDENT and tok.value in ("get", "set"))
        self.pos = save
        return result

    def _parse_property(self, access, type_expr, name, line, col) -> PropertyDecl:
        """Parse a C#-style property: type name { get; set; } or { get { ... } set { ... } }"""
        self._expect(TokenType.LBRACE)
        has_getter = False
        has_setter = False
        getter_body = None
        setter_body = None

        while not self._check(TokenType.RBRACE) and not self._at_end():
            tok = self._peek()
            if tok.type == TokenType.IDENT and tok.value == "get":
                self._advance()
                has_getter = True
                if self._match(TokenType.SEMICOLON):
                    getter_body = None  # auto-property getter
                elif self._check(TokenType.LBRACE):
                    getter_body = self._parse_block()
                else:
                    raise self._error("Expected ';' or '{' after 'get'")
            elif tok.type == TokenType.IDENT and tok.value == "set":
                self._advance()
                has_setter = True
                if self._match(TokenType.SEMICOLON):
                    setter_body = None  # auto-property setter
                elif self._check(TokenType.LBRACE):
                    setter_body = self._parse_block()
                else:
                    raise self._error("Expected ';' or '{' after 'set'")
            else:
                raise self._error(f"Expected 'get' or 'set' in property, got '{tok.value}'")

        self._expect(TokenType.RBRACE)
        return PropertyDecl(access=access, type=type_expr, name=name,
                            has_getter=has_getter, has_setter=has_setter,
                            getter_body=getter_body, setter_body=setter_body,
                            line=line, col=col)

    # ---- Struct declaration ----

    def _parse_struct_decl(self) -> StructDecl:
        tok = self._expect(TokenType.STRUCT)
        name = ""
        if self._check(TokenType.IDENT):
            name = self._advance().value

        if self._match(TokenType.LBRACE):
            fields = []
            while not self._check(TokenType.RBRACE) and not self._at_end():
                ftype = self._parse_type_expr()
                fname = self._expect(TokenType.IDENT, "field name").value
                # C-style array field: type name[N]
                if self._check(TokenType.LBRACKET):
                    self._advance()  # [
                    if self._check(TokenType.RBRACKET):
                        self._advance()  # ]
                        ftype.is_array = True
                    else:
                        size_expr = self._parse_expr()
                        self._expect(TokenType.RBRACKET)
                        ftype.is_array = True
                        ftype.array_size = size_expr
                fields.append(FieldDecl(type=ftype, name=fname, line=tok.line, col=tok.col))
                self._expect(TokenType.SEMICOLON)
            self._expect(TokenType.RBRACE)
            self._expect(TokenType.SEMICOLON)
            return StructDecl(name=name, fields=fields, line=tok.line, col=tok.col)
        else:
            # Forward declaration: struct Foo;
            self._expect(TokenType.SEMICOLON)
            return StructDecl(name=name, fields=[], line=tok.line, col=tok.col)

    # ---- Interface declaration ----

    def _parse_interface_decl(self) -> InterfaceDecl:
        tok = self._expect(TokenType.INTERFACE)
        name = self._expect(TokenType.IDENT, "interface name").value

        # Interface inheritance
        parent = None
        if self._match(TokenType.EXTENDS):
            parent = self._expect(TokenType.IDENT, "parent interface name").value

        self._expect(TokenType.LBRACE)
        methods = []
        while not self._check(TokenType.RBRACE) and not self._at_end():
            # Interface methods: returnType name(params);
            ret_type = self._parse_type_expr()
            mname = self._expect(TokenType.IDENT, "method name").value
            self._expect(TokenType.LPAREN)
            params = self._parse_param_list()
            self._expect(TokenType.RPAREN)
            self._expect(TokenType.SEMICOLON)
            methods.append(MethodDecl(access="public", return_type=ret_type, name=mname,
                                      params=params, body=None, is_abstract=True,
                                      line=tok.line, col=tok.col))
        self._expect(TokenType.RBRACE)
        return InterfaceDecl(name=name, methods=methods, parent=parent,
                             line=tok.line, col=tok.col)

    # ---- Enum declaration ----

    def _parse_enum_decl(self) -> EnumDecl:
        tok = self._expect(TokenType.ENUM)
        name = ""
        if self._check(TokenType.IDENT):
            name = self._advance().value

        self._expect(TokenType.LBRACE)
        values = []
        while not self._check(TokenType.RBRACE) and not self._at_end():
            vname = self._expect(TokenType.IDENT, "enum value").value
            vval = None
            if self._match(TokenType.EQ):
                vval = self._parse_expr()
            values.append((vname, vval))
            if not self._match(TokenType.COMMA):
                break
        self._expect(TokenType.RBRACE)
        self._expect(TokenType.SEMICOLON)
        return EnumDecl(name=name, values=values, line=tok.line, col=tok.col)

    # ---- Rich enum declaration ----

    def _parse_rich_enum_decl(self) -> RichEnumDecl:
        """Parse: enum class Name { Variant1(type1 name1), Variant2, ... }"""
        tok = self._expect(TokenType.ENUM)
        self._expect(TokenType.CLASS)
        name = self._expect(TokenType.IDENT, "enum name").value
        self._expect(TokenType.LBRACE)
        variants = []
        while not self._check(TokenType.RBRACE) and not self._at_end():
            vname = self._expect(TokenType.IDENT, "variant name").value
            params = []
            if self._match(TokenType.LPAREN):
                if not self._check(TokenType.RPAREN):
                    params = self._parse_param_list()
                self._expect(TokenType.RPAREN)
            variants.append(RichEnumVariant(name=vname, params=params))
            if not self._match(TokenType.COMMA):
                break
        self._expect(TokenType.RBRACE)
        return RichEnumDecl(name=name, variants=variants, line=tok.line, col=tok.col)

    # ---- Typedef declaration ----

    def _parse_typedef_decl(self) -> TypedefDecl:
        tok = self._expect(TokenType.TYPEDEF)
        original = self._parse_type_expr()
        alias = self._expect(TokenType.IDENT, "typedef alias").value
        self._expect(TokenType.SEMICOLON)
        return TypedefDecl(original=original, alias=alias, line=tok.line, col=tok.col)

    # ---- Function or variable declaration ----

    def _parse_function_or_var_decl(self, is_gpu: bool = False):
        """Disambiguate function vs variable at top level."""
        start = self._peek()

        # Handle 'var' at top level — always a variable
        if self._check(TokenType.VAR):
            if is_gpu:
                raise self._error("@gpu cannot be applied to variables")
            self._advance()  # consume 'var'
            name = self._expect(TokenType.IDENT, "variable name").value
            self._expect(TokenType.EQ, "'=' (var requires an initializer)")
            init = self._parse_expr()
            self._expect(TokenType.SEMICOLON)
            return VarDeclStmt(type=None, name=name, initializer=init,
                               line=start.line, col=start.col)

        type_expr = self._parse_type_expr()
        name_tok = self._expect(TokenType.IDENT, "name")
        name = name_tok.value

        if self._check(TokenType.LPAREN):
            # Function (definition or forward declaration)
            self._expect(TokenType.LPAREN)
            params = self._parse_param_list()
            self._expect(TokenType.RPAREN)
            # Forward declaration: type name(params);
            if self._match(TokenType.SEMICOLON):
                return FunctionDecl(return_type=type_expr, name=name, params=params,
                                    body=None, is_gpu=is_gpu,
                                    line=start.line, col=start.col)
            body = self._parse_block()
            return FunctionDecl(return_type=type_expr, name=name, params=params,
                                body=body, is_gpu=is_gpu,
                                line=start.line, col=start.col)
        else:
            # Variable
            if is_gpu:
                raise self._error("@gpu cannot be applied to variables")
            init = None
            if self._match(TokenType.EQ):
                init = self._parse_expr()
            self._expect(TokenType.SEMICOLON)
            return VarDeclStmt(type=type_expr, name=name, initializer=init,
                               line=start.line, col=start.col)

    # ---- Type expressions ----

    def _is_type_start(self, tok: Token) -> bool:
        """Check if a token could start a type expression."""
        if tok.type == TokenType.VAR:
            return True
        if tok.type in TYPE_KEYWORDS:
            return True
        if tok.type == TokenType.IDENT:
            return True
        if tok.type == TokenType.LIST or tok.type == TokenType.MAP or tok.type == TokenType.SET or tok.type == TokenType.ARRAY:
            return True
        # Tuple type: (int, int)
        if tok.type == TokenType.LPAREN and self._is_tuple_type_start():
            return True
        return False

    def _parse_type_expr(self) -> TypeExpr:
        tok = self._peek()
        line, col = tok.line, tok.col

        # Handle const/static/extern/volatile qualifiers (skip them, pass through)
        while self._check(TokenType.CONST, TokenType.STATIC, TokenType.EXTERN, TokenType.VOLATILE):
            self._advance()

        # Handle unsigned/signed qualifiers
        if self._check(TokenType.UNSIGNED, TokenType.SIGNED):
            base = self._advance().value
            # Can be followed by int/short/long/char or standalone
            if self._check(TokenType.INT, TokenType.SHORT, TokenType.LONG, TokenType.CHAR):
                base += " " + self._advance().value
                # Handle "long long"
                if base.endswith("long") and self._check(TokenType.LONG):
                    base += " " + self._advance().value
        elif self._check(TokenType.LONG):
            base = self._advance().value
            # Handle "long long", "long int", "long double"
            if self._check(TokenType.LONG):
                base += " " + self._advance().value
            if self._check(TokenType.INT, TokenType.DOUBLE):
                base += " " + self._advance().value
        elif self._check(TokenType.SHORT):
            base = self._advance().value
            if self._check(TokenType.INT):
                base += " " + self._advance().value
        elif self._check(TokenType.STRUCT):
            self._advance()
            base = "struct " + self._expect(TokenType.IDENT, "struct name").value
        elif self._check(TokenType.ENUM):
            self._advance()
            base = "enum " + self._expect(TokenType.IDENT, "enum name").value
        elif self._check(TokenType.UNION):
            self._advance()
            base = "union " + self._expect(TokenType.IDENT, "union name").value
        elif self._check(TokenType.LPAREN):
            # Tuple type: (int, int) or (string, int, float)
            return self._parse_tuple_type(line, col)
        else:
            base_tok = self._advance()
            base = base_tok.value

        # Generic arguments
        generic_args = []
        if self._check(TokenType.LT) and self._is_generic_start():
            self._advance()  # consume <
            generic_args.append(self._parse_type_expr())
            while self._match(TokenType.COMMA):
                generic_args.append(self._parse_type_expr())
            self._expect_gt()

        # Array suffix []
        is_array = False
        if self._check(TokenType.LBRACKET) and self._peek(1).type == TokenType.RBRACKET:
            self._advance()  # [
            self._advance()  # ]
            is_array = True

        # Pointer
        pointer_depth = 0
        while self._match(TokenType.STAR):
            pointer_depth += 1

        # Nullable: T? is sugar for T* (adds one pointer level)
        if self._match(TokenType.QUESTION):
            pointer_depth += 1

        return TypeExpr(base=base, generic_args=generic_args,
                        pointer_depth=pointer_depth, is_array=is_array,
                        line=line, col=col)
